# analytics-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
liquibase/: Dockerfile  dbchangelog.xml  entrypoint.sh
notebooks/: Analytics_Dashboard.ipynb  Analytics_Dashboard_Demo.ipynb  Analytics_Dashboard_Documentation.ipynb  Analytics_Dashboard_Github.ipynb  Analytics_Dashboard_PubMed_Demo.ipynb  Analytics_Dashboard_PyPi_Demo.ipynb  Analytics_Dashboard_Technical_Documentation.ipynb  Analytics_Dashboard_WIP.ipynb  analytics_dashboard.ipynb  analytics_dashboard_pypi.ipynb  pubmed_demo.ipynb
qc/: fetch-citation-count-for-all-ga4gh-papers.py  fetch-citation-count-for-paper.py
resources/: .env.local  pubmed_demo_with_insert.ipynb
sql/: 20250728001_create_article_type_enum.up.sql  20250728001_create_record_type_enum.up.sql  20250728003_create_article_status_enum.up.sql  20250728003_create_record_status_enum.up.sql  20250728003_create_status_enum.up.sql  20250728004_create_records_table.up.sql  20250728005_create_articles_table.up.sql  20250728006_create_authors_table.up.sql  20250728007_create_affiliations_table.down.sql  20250728007_create_affiliations_table.up.sql  20250728008_create_pypi_table.up.sql  20250728009_create_pypi_versions_table.up.sql  20250728010_create_github_repos_table.up.sql  20250731011_create_repo_entity_actions_table.up.sql  20250731012_create_contributor_entity_table.up.sql  20250731012_create_github_entity_table.up.sql  20250731013_create_github_archieved_stats_table.up.sql  (+26 more)
(+150 files in other folders)
