[project]
name = "analytics-dashboard-be"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    "*_test.py",
    "test_*.py",
    "tests/",
    "resources/",
    "resources/**/*",
    "notebooks/",
    "notebooks/**/*"
]

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]

ignore = [
    #### modules
    "AIR",  # airflow
    "COM", # flake8-commas
    "DJ",  # django

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "TD002",
    "TD003",
    "TRY003",
    "FIX002", # too verbose descriptions of todos
]

[tool.ruff.lint.pydocstyle]
convention = "google"